backend/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bsl-backend-service

spec:
  selector:
    app: bsl-backend

  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
